--- a/payment.html
+++ b/payment.html
@@ -217,8 +217,8 @@
       <strong><br>Payment is accepted through MOMO and reference your name during payment (Reference should match the one provided here, for security reasons).<br>
       <br>
         Name: Adorina.
-        Momo Number: 0244266271,
-        Amount: GH₵‎56
+       <p>Momo Number: 0244266271</p> 
+       <p>Amount: GH₵‎56</p> 
         <br>
       </strong>
     </p>
