--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BracesByAdorina</title>
     <link rel="stylesheet" href="./css/style.css" />
     <!-- FontAwesome for icons -->
@@ -11,7 +10,7 @@
   </head>
   <body>
 
-     <!-- Logo Section -->
+    <!-- Logo Section -->
     <header class="main-header">
       <div class="container">
         <div class="main-info">
@@ -26,8 +25,6 @@
           <h1 class="site-title">BracesByAdorina</h1>
         </div>
       </div>
-
-     
 
       <div class="main-nav">
         <div class="container">
@@ -151,14 +148,13 @@
       </div>
     </section>
 
-
     <!-- Services Section -->
     <div class="services-container">
       <h1 class="section-title">Our Services</h1>
       <div class="service-container">
         <div class="service-box">
           <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="250" />
-            <b><p></p></b>
+          <b><p></p></b>
         </div>
         <div class="service-box">
           <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="250" />
@@ -171,51 +167,44 @@
       </div>
     </div>
 
-
     <!-- Video Section -->
-<section class="video-section">
-  <div class="container">
-    <h2 class="section-title">Watch Our Videos</h2>
-    <div class="video-container">
-      <video class="responsive-video" autoplay loop muted>
-        <source src="./images/video1.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </div>
-  </div>
-</section>
-
+    <section class="video-section">
+      <div class="container">
+        <h2 class="section-title">Watch Our Videos</h2>
+        <div class="video-container">
+          <video class="responsive-video" autoplay loop muted>
+            <source src="./images/video1.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </section>
 
     <footer class="main-footer">
-  <div class="container">
-    <!-- Logo Section -->
-    <div class="col-logo">
-      <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Logo" style="width: 150px;"> <!-- Replace with your logo image -->
-    </div>
+      <div class="container">
+        <!-- Logo Section -->
+        <div class="col-logo">
+          <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Logo" style="width: 150px;">
+        </div>
 
+        <!-- Social Media Section -->
+        <div class="col-sns">
+          <ul class="sns">
+            <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+            <p>@bracesbyadorina on all Platform</p>
+          </ul>
+        </div>
 
-    <!-- Social Media Section -->
-    <div class="col-sns">
-      <ul class="sns">
-        <!-- Replace # with the actual links -->
-        <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-         <p>@bracesbyadorina on all Platform</p>
-      </ul>
-    </div>
-
-
-
-    <!-- Contact Us Section -->
-    <div class="col-4">
-            <h3>Contact Us</h3>
-            <p><i class="fas fa-phone-alt"></i> 0244266271 </p>
-            <p><i class="fas fa-map-marker-alt"></i><a href="www.google.com/STADIUM+JUNCTION/@5.7071606,-0.2989597,17z/data=!3m1!4b1!4m6!3m5!1s0xfdf9f7b0784bc21:0xa721f45e441a064e!8m2!3d5.7071606!4d-0.2989597!16s%2Fg%2F11kp6k4pfy?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Amasaman-Stadium road/ Agartha Junction Accra</a></p>
-            <p><i class="fas fa-envelope"></i> <a href="BracesbyAdorina@gmail.com">BracesbyAdorina@gmail.com</a></p>
-    </div>
+        <!-- Contact Us Section -->
+        <div class="col-4">
+          <h3>Contact Us</h3>
+          <p><i class="fas fa-phone-alt"></i> 0244266271 </p>
+          <p><i class="fas fa-map-marker-alt"></i><a href="https://mapcarta.com/N5000972537">Dansoman-Control</a></p>
+          <p><i class="fas fa-envelope"></i> <a href="BracesbyAdorina@gmail.com">BracesbyAdorina@gmail.com</a></p>
+        </div>
       </div>
-   </footer>
-    </div>
+    </footer>
   </body>
 </html>
