--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BracesByAdorina</title>
     <link rel="stylesheet" href="./css/style.css" />
     <!-- FontAwesome for icons -->
@@ -10,7 +11,7 @@
   </head>
   <body>
 
-    <!-- Logo Section -->
+     <!-- Logo Section -->
     <header class="main-header">
       <div class="container">
         <div class="main-info">
@@ -26,7 +27,16 @@
         </div>
       </div>
 
-      
+     
+
+      <div class="main-nav">
+        <div class="container">
+          <nav>
+            <a href="./payment.html">Purchase A Braces</a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <section class="kv">
       <div class="slider-banner">
@@ -37,7 +47,7 @@
                 <div class="item-kv-txt col-md-6 col-xl-4">
                   <h2>Purchase Braces From Adorina</h2>
                   <h3>Get All Kinds And Colours Of Braces From Adorina.</h3>
-                  <a  href="./payment.html"  class="btn">Order For Braces</a>
+                  <a class="btn">Purchase From The Best</a>
                 </div>
               </div>
             </div>
@@ -141,13 +151,14 @@
       </div>
     </section>
 
+
     <!-- Services Section -->
     <div class="services-container">
       <h1 class="section-title">Our Services</h1>
       <div class="service-container">
         <div class="service-box">
           <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="250" />
-          <b><p></p></b>
+            <b><p></p></b>
         </div>
         <div class="service-box">
           <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="250" />
@@ -160,44 +171,51 @@
       </div>
     </div>
 
+
     <!-- Video Section -->
-    <section class="video-section">
-      <div class="container">
-        <h2 class="section-title">Watch Our Videos</h2>
-        <div class="video-container">
-          <video class="responsive-video" autoplay loop muted>
-            <source src="./images/video1.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
-        </div>
-      </div>
-    </section>
+<section class="video-section">
+  <div class="container">
+    <h2 class="section-title">Watch Our Videos</h2>
+    <div class="video-container">
+      <video class="responsive-video" autoplay loop muted>
+        <source src="./images/video1.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </div>
+</section>
+
 
     <footer class="main-footer">
-      <div class="container">
-        <!-- Logo Section -->
-        <div class="col-logo">
-          <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Logo" style="width: 150px;">
-        </div>
+  <div class="container">
+    <!-- Logo Section -->
+    <div class="col-logo">
+      <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Logo" style="width: 150px;"> <!-- Replace with your logo image -->
+    </div>
 
-        <!-- Social Media Section -->
-        <div class="col-sns">
-          <ul class="sns">
-            <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-            <p>@bracesbyadorina on all Platform</p>
-          </ul>
-        </div>
 
-        <!-- Contact Us Section -->
-        <div class="col-4">
-          <h3>Contact Us</h3>
-          <p><i class="fas fa-phone-alt"></i> 0244266271 </p>
-          <p><i class="fas fa-map-marker-alt"></i><a href="https://mapcarta.com/N5000972537">Dansoman-Control</a></p>
-          <p><i class="fas fa-envelope"></i> <a href="BracesbyAdorina@gmail.com">BracesbyAdorina@gmail.com</a></p>
-        </div>
+    <!-- Social Media Section -->
+    <div class="col-sns">
+      <ul class="sns">
+        <!-- Replace # with the actual links -->
+        <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+         <p>@bracesbyadorina on all Platform</p>
+      </ul>
+    </div>
+
+
+
+    <!-- Contact Us Section -->
+    <div class="col-4">
+            <h3>Contact Us</h3>
+            <p><i class="fas fa-phone-alt"></i> 0244266271 </p>
+            <p><i class="fas fa-map-marker-alt"></i><a href="https://mapcarta.com/N5000972537">Dansoman-Control</a></p>
+            <p><i class="fas fa-envelope"></i> <a href="BracesbyAdorina@gmail.com">BracesbyAdorina@gmail.com</a></p>
+    </div>
       </div>
-    </footer>
+   </footer>
+    </div>
   </body>
 </html>
