--- a/index.html
+++ b/index.html
@@ -29,14 +29,7 @@
 
      
 
-      <div class="main-nav">
-        <div class="container">
-          <nav>
-            <a href="./payment.html">Purchase A Braces</a>
-          </nav>
-        </div>
-      </div>
-    </header>
+     
 
     <section class="kv">
       <div class="slider-banner">
@@ -47,7 +40,7 @@
                 <div class="item-kv-txt col-md-6 col-xl-4">
                   <h2>Purchase Braces From Adorina</h2>
                   <h3>Get All Kinds And Colours Of Braces From Adorina.</h3>
-                  <a class="btn">Purchase From The Best</a>
+                  <a href="./payment.html" class="btn">Order For Braces</a>
                 </div>
               </div>
             </div>
