--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         </div>
       </div>
 
-     
+      <div class="main-nav">
+        <div class="container">
+          <nav>
+          </nav>
+        </div>
+      </div>
+    </header>
 
      
 
