--- a/payment.html
+++ b/payment.html
@@ -240,7 +240,7 @@
       </select>
 
       <label for="amountPaid">Amount Paid (GH₵):</label>
-      <input type="number" id="amountPaid" name="amountPaid" placeholder="Enter amount paid" required>
+      <input type="number" id="amountPaid" name="amountPaid" placeholder="Enter amount for purchasing" required>
 
       <label for="reference">Add Reference:</label>
       <input type="text" id="reference" name="reference" placeholder="Enter payment reference" required>
