--- a/payment.html
+++ b/payment.html
@@ -216,8 +216,8 @@
       Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance or half payments.
       <strong><br>Payment is accepted through MOMO and reference your name during payment (Reference should match the one provided here, for security reasons).<br>
       <br>
-       <p> Name: Adorina.</p> 
-       <p>Momo Number: 0244266271</p> 
+       <p> Name: Samuel Ofosu.</p> 
+       <p>Momo Number: 0559758307</p> 
         <br>
       </strong>
     </p>
