--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <ul class="sns">
         <!-- Replace # with the actual links -->
         <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="TikTok"><i class="fab fa-twitter"></i></a></li>
         <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
          <p>@bracesbyadorina on all Platform</p>
       </ul>
