--- a/payment.html
+++ b/payment.html
@@ -251,10 +251,11 @@
 
   <footer>
     <ul class="sns">
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com/your_username" target="_blank"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/your_username" target="_blank"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://www.tiktok.com/@your_username" target="_blank"><i class="fab fa-tiktok"></i></a></li>
     </ul>
+
     <p>Contact Us: BracesbyAdorina@gmail.com | +233 244266271</p>
   </footer>
 
