--- a/index.html
+++ b/index.html
@@ -196,12 +196,11 @@
     <!-- Social Media Section -->
     <div class="col-sns">
       <ul class="sns">
-        <!-- Replace # with the actual links -->
-        <li><a href="https://www.facebook.com/@bracesbyadorina" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="https://www.twitter.com/@bracesbyadorina" target="_blank" title="TikTok"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com/@bracesbyadorina" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-         <p>@bracesbyadorina on all Platform</p>
-      </ul>
+          <li><a href="https://www.facebook.com/your_username" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://www.instagram.com/your_username" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.tiktok.com/@your_username" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+        </ul>
+
     </div>
 
 
