--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
     <!-- Social Media Section -->
     <div class="col-sns">
       <ul class="sns">
-          <li><a href="https://www.facebook.com/your_username" target="_blank"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="https://www.instagram.com/your_username" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://www.tiktok.com/@your_username" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-tiktok"></i></a></li>
         </ul>
 
     </div>
